Add filtering by next recurrence
